--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./scripts/scripts.js"></script>
 </head>
 <body>
-    <div id="calculadora">
+    <div class="calculadora">
         <input type="text" class="pantalla" id="pantalla" placeholder="0" readonly>
         <input type="button" class="boton" id="boton7" value="7">
         <input type="button" class="boton" id="boton8" value="8">
